--- a/lab2/dragon-tiger/.gitignore
+++ b/lab2/dragon-tiger/.gitignore
@@ -1,12 +1,16 @@
 *~
 Makefile
+Makefile.in
+aclocal.m4
 autom4te.cache/
 config.h
 config.log
 config.status
 stamp-h1
 src/**/*.o
+src/ast/Makefile.in
 src/**/Makefile
+src/**/Makefile.in
 src/**/*.a
 src/**/.deps
 src/**/.clang_complete
