--- a/lab3/dragon-tiger/.gitignore
+++ b/lab3/dragon-tiger/.gitignore
@@ -1,12 +1,16 @@
 *~
+aclocal.m4
 Makefile
+Makefile.in
 autom4te.cache/
 config.h
 config.log
 config.status
 stamp-h1
+test.tig
 src/**/*.o
 src/**/Makefile
+src/**/Makefile.in
 src/**/*.a
 src/**/.deps
 src/**/.clang_complete
@@ -16,4 +20,3 @@ src/parser/tiger_parser.cc
 src/parser/bison-graph.gv
 src/parser/bison-report.txt
 src/driver/dtiger
-
