Adding files from parser, ast ans irgen parts

--- a/lab6/dragon-tiger/configure.ac
+++ b/lab6/dragon-tiger/configure.ac
@@ -30,6 +30,9 @@ AC_PATH_PROG([LLVM_OPT], [opt], [opt], [$LLVM_BINDIR/$PATH_SEPARATOR$PATH])
 AC_CONFIG_FILES([Makefile
                  compile
                  src/Makefile
+                 src/parser/Makefile
+                 src/ast/Makefile
+                 src/irgen/Makefile
                  src/driver/Makefile
                  src/runtime/posix/Makefile
                  src/utils/Makefile
