--- a/lab4/dragon-tiger/.gitignore
+++ b/lab4/dragon-tiger/.gitignore
@@ -1,5 +1,7 @@
 *~
 Makefile
+Makefile.in
+aclocal.m4
 autom4te.cache/
 config.h
 config.log
@@ -8,6 +10,7 @@ stamp-h1
 test.tig
 src/**/*.o
 src/**/Makefile
+src/**/Makefile.in
 src/**/*.a
 src/**/.deps
 src/**/.clang_complete
@@ -17,4 +20,3 @@ src/parser/tiger_parser.cc
 src/parser/bison-graph.gv
 src/parser/bison-report.txt
 src/driver/dtiger
-
